--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,18 @@ dist
 bower_components
 node_modules
 npm-debug.log
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+*.swp
+
+# PhpStorm
+.idea/dataSources.local.xml
+.idea/workspace.xml
