--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,13 @@
     },
     "fontawesome": {
       "main": [
-        "./scss/font-awesome.scss"
+        "./scss/font-awesome.scss",
+        "./fonts/FontAwesome.otf",
+        "./fonts/fontawesome-webfont.eot",
+        "./fonts/fontawesome-webfont.svg",
+        "./fonts/fontawesome-webfont.ttf",
+        "./fonts/fontawesome-webfont.woff",
+        "./fonts/fontawesome-webfont.woff2"
       ]
     }
   }
